first draft of report

--- a/interim-report/interim.bib
+++ b/interim-report/interim.bib
@@ -1,16 +1,19 @@
-@Book{BK08,
-author={C. Baier and J.-P. Katoen},
-title={Principles of Model Checking},
-publisher={MIT Press},
-year={2008},
+@misc{smartgrips,
+author={Boreal Bikes},
+title={Garmin Varia RTL515},
+howpublished="\url{https://www.garmin.com/en-GB/p/698001}"
+}
 
-volume={},
-series={},
-address={},
-edition={},
-month={},
-note={},
-key={}
+@misc{garminradar,
+author={Garmin},
+title={smrtGRiPS},
+howpublished="\url{https://smrtgrips.com/}"
+}
+
+@misc{usdot,
+author={United States Department of Transportation},
+title={US Connected Vehicles Program},
+howpublished="\url{https://www.its.dot.gov/research_archives/connected_vehicle/connected_vehicle.htm}"
 }
 
 @book{world2018global,
@@ -512,12 +515,11 @@ series = {MobileHCI '18}
   howpublished = "\url{https://www.ilga.gov/legislation/ilcs/ilcs3.asp}"
 }
 
-@inproceedings{inproceedings,
-author = {Large, David and Choo, Mun and Houghton, Robert},
-year = {2018},
-month = {10},
-pages = {},
-title = {Validating ‘Dutch Reach’: A Preliminary Evaluation of Far-Hand Door Opening and its Impact on Car Drivers’ Head Movements}
+@inproceedings{large2018validating,
+  title={Validating ‘Dutch Reach’: A Preliminary Evaluation of Far-Hand Door Opening and its Impact on Car Drivers’ Head Movements},
+  author={Large, David and Choo, Mun and Houghton, Robert},
+  booktitle={Proceedings of the 12th IEEE International Conference on Semantic Computing, ICSC},
+  year={2018}
 }
 
 
@@ -676,15 +678,6 @@ month = "6",
 url = "https://repository.lboro.ac.uk/articles/conference_contribution/Potential_of_ITS_to_improve_safety_and_mobility_of_VRUs/9341477",
 }
 
-@article{silla2017can,
-  title={Can cyclist safety be improved with intelligent transport systems?},
-  author={Silla, Anne and Leden, Lars and R{\"a}m{\"a}, Pirkko and Scholliers, Johan and Van Noort, Martijn and Bell, Daniel},
-  journal={Accident Analysis \& Prevention},
-  volume={105},
-  pages={134--145},
-  year={2017},
-  publisher={Elsevier}
-}
 
 @article{de2017negative,
   title={Negative attitudes towards cyclists influence the acceptance of an in-vehicle cyclist detection system},
@@ -726,12 +719,16 @@ url = "https://repository.lboro.ac.uk/articles/conference_contribution/Potential
   pages={164-165},
   doi={10.1109/ISWC.1998.729547}}
 
-@article{deguara2000investigating,
-  title={Investigating the use of tactile feedback systems to enhance spatial awareness in altered-gravity environments; Summary Report for the NASA KC-135A Life Sciences Report},
-  author={Deguara, J and Traylor, R and Lim, A and Glassley, J and Casteel, R and Tan, H},
-  journal={Purdue University, School of Electrical and Computer Engineering},
-  year={2000}
-}
+@INPROCEEDINGS{998954,
+  author={Traylor, R. and Tan, H.Z.},
+  booktitle={Proceedings 10th Symposium on Haptic Interfaces for Virtual Environment and Teleoperator Systems. HAPTICS 2002}, 
+  title={Development of a wearable haptic display for situation awareness in altered-gravity environment: some initial findings}, 
+  year={2002},
+  volume={},
+  number={},
+  pages={159-164},
+  doi={10.1109/HAPTIC.2002.998954}}
+
 
 @book{geldard1975sensory,
   title={Sensory saltation: Metastability in the perceptual world.},
@@ -1044,4 +1041,17 @@ numpages = {10},
 keywords = {tactile interface, car navigation system},
 location = {Reykjavik, Iceland},
 series = {NordiCHI '10}
+}
+
+@article{noisyenv,
+author = {Edworthy, Judy. and Hellier, Elizabeth.},
+title =  {{Auditory warnings in noisy environments}},
+journal  ={Noise and Health},
+volume ={2},
+number ={6},
+pages  = {27-39},
+year  = {2000},
+abstract ={Auditory warnings are used throughout industry, transport, and the medical world. Despite the fact that auditory warnings frequently have to compete with intense and complex noise backgrounds, their use is widespread. This article reviews research and practice in the area of auditory warning design and implementation with particular emphasis on noisy environments. Auditory and visual modalities as warning senses are compared, and ergonomic methods of producing warnings which are acoustically tailored to their environments are reviewed. Developments in design approaches are reviewed with examples of both traditional types of warnings and digital, contemporary warning styles. Other issues such as false alarms and the minimisation of warning numbers are briefly considered.},
+URL ={https://www.noiseandhealth.org/article.asp?issn=1463-1741;year=2000;volume=2;issue=6;spage=27;epage=39;aulast=Edworthy;t=6},
+eprint ={https://www.noiseandhealth.org/article.asp?issn=1463-1741;year=2000;volume=2;issue=6;spage=27;epage=39;aulast=Edworthy;t=6}
 }
