--- a/interim-report/interim.tex
+++ b/interim-report/interim.tex
@@ -8,6 +8,9 @@
 % and see documentation for commands
 \usepackage{fancyheadings}
 
+% make links clickable
+\usepackage[hidelinks]{hyperref}
+
 
 % other potentially useful packages
 %\uspackage{amssymb,amsmath}
@@ -31,35 +34,79 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Introduction}\label{intro}
-
 \subsection{Motivation}
-Each year, road-traffic accidents account for 1.35 million deaths worldwide, with cyclists composing of 41,000 of these fatalities \cite{world2018global}. The economic burden associated with road accidents in the EU alone is estimated to amount to 236 billion euros annually \cite{costoftransport}. Despite the EU achieving an average annual reduction of 3\% in motor vehicle related fatalities, between 2010 and 2018, the fatality rate for cyclist remained the same across that same period \cite{adminaite2020safe} - emphasising the lack of attention that cyclists have received regarding road safety.
+Each year, road-traffic accidents account for 1.35 million deaths worldwide, with cyclists comprising 41,000 of these fatalities \cite{world2018global}. The economic burden associated with road accidents in the EU alone is estimated to amount to 236 billion euros annually \cite{costoftransport}. Despite the EU achieving an average annual reduction of 3\% in motor vehicle related fatalities, between 2010 and 2018, the fatality rate for cyclists remained the same across that same period \cite{adminaite2020safe} - emphasising the lack of attention towards cyclists regarding road safety.
 
-One of the leading causes of fatalities among cyclists are collisions with a motorised vehicle \cite{BIL20101632}, being involved in 78\% of cyclists fatalities in the EU \cite{adminaite2015making}. Although a collision with another vehicle may occur from any angle, collisions where the offending vehicle crashes from behind the cyclist causes the largest proportion of fatalities of all crash directions \cite{BIL20101632}. Despite much previous work investigating how cyclist safety can be improved using safety systems implemented within other road vehicles [[Potential of ITS to improve safety and mobility of VRUs]], [[Can cyclist safety be improved with intelligent transport systems]], [[PROactive Safety for PEdestrians and CyclisTs]], [[Towards a connected bicycle to communicate with vehicles and infrastructure - Multimodel alerting interface with Networked Short-Range Transmissions (MAIN-ST)]], [[Increasing Traffic Safety with Real-Time Edge Analytics and 5G]], relatively few studies have explored how cyclist safety can be improved from the perspective of the cyclist [[Hazard Notifications for Cyclists - Comparison of Awareness Message Modalities in a Mixed Reality Study]], [[How do warnings influence cyclists' reaction to conflicts - Comparing acoustic and vibro-tactile warnings in different conflicts on a test track]]. 
+One of the leading causes of fatalities among cyclists are collisions with a motorised vehicle \cite{BIL20101632}, with 78\% of cyclists fatalities in the EU due to bicycle-to-vehicle collisions \cite{adminaite2015making}. Although a collision with another vehicle may occur from any angle, those where the offending vehicle crashes from behind the cyclist causes the largest proportion of fatalities of all crash directions \cite{BIL20101632}. Despite a large body of research investigating how cyclist safety can be improved using safety systems implemented within other road vehicles \cite{scholliers2014potential, SILLA2017134, cieslik2019improving, 7929602, 10.1145/3434770.3459732} relatively few studies have explored how cyclist safety can be improved from the perspective of the cyclist \cite{10.1145/3490099.3511127, STROHAEKER2022151}. 
 
-This idea informs the next questions: what factors contributes towards road-traffic accidents, and how can they be prevented? A UK governmental report found that the primary contributing factor across all vehicles involved in an accident with a cyclist was the issue of *“failure to look properly"* \cite{factsonpedalcyclists}. While one such solution to this problem could be heightened road-safety education for road vehicles [CITE SOMETHING], the same solution is not as easily applied to cyclists. Unlike motor vehicles, cyclists require much greater vigilance, due to their inherent limitations such as a lack of field of vision, safety technology, and lower mass [cite]. Notably, the use of such technology in cyclists is on the rise [CITE], with modern bike radars able to detect and notify cyclists of vehicles approaching from behind - functioning akin to rear-view mirrors in motor vehicles, a component which bicycles do not typically have [FOOTNOTE saying there are actually cycling mirrors]. However, such radars, which are typically connected to the cyclists mounted smartphone or bike computer, require diverting their attention from the road to the screen. [SENTENCE AND CITATION DESCRIBING WHY THIS IS BAD]. What is needed is a device to communicate the information from a bike radar, in a way which does not distract a cyclist.
+Cycling is often considered to be a task which requires a large amount of cognitive effort. Studies investigating the cognitive demand of cycling has shown that novice cyclists often struggle to accomplish cognitive tasks which are necessary for traffic safety \cite{https://doi.org/10.1002/acp.2350050205}. To aid cyclists, safety technology such as rear-view bike radars \cite{garminradar}, help reduce cognitive load, by delivering warning message both visually and audibly on approaching vehicles from behind. An obvious benefit of auditory messages is that they do not consume the visual sensory channel of the cyclist. However, auditory messages have been shown to be difficult to understand in noisy environments \cite{noisyenv} and in situations such as when the cyclist is listening to music, something which many admit to doing \cite{DEWAARD2011626}.
 
-^^^
-mention above that there is much opportunity for interaction with helmets, as proven by these references:
-- [[Interaction opportunities around helmet design]] - paper shows possibility of wearable tech to show unique information. This helmet was fitted with LEDs to communicate to other road users.
-- [[What you said about where you shook your head - a hands-free implementation of a location-based notification system]] - First envisioning of a smart helmet which can display information to other road users via light.
-
-[[A conceptual framework for road safety and mobility applied to cycling safety]] - cyclists have lower mass. LOOK THROUGH THIS
-[[Making walking and cycling on Europe's roads safer]] - 52\% of cyclist accidents are from cars
+A possible alternative message modality is vibro-tactile, something which has typically only been used in cycling for navigational purposes \cite{10.1145/2371574.2371631, 10.1145/1613858.1613911}. Regarding where to encode vibro-tactile stimulation, there are many options. Many previous works have used belts \cite{10.1145/1613858.1613911, 10.1145/1463160.1463179, tsukada2004activebelt, 10.1145/2449396.2449450, 10.1145/1060581.1060585}, vests \cite{729547, 998954, van2000tactile}, and even the hands [cite all] as mediums for vibrational stimuli. Bicycles themselves have also been used \cite{10.1145/2371574.2371631, 10.1145/3290605.3300850}, with products such as attachable handlebar grips which can provide vibro-tactile feedback \cite{smartgrips}. However, a relatively unexplored area is the potential of the helmet. Few studies have explored how helmets can be used for interaction while cycling \cite{10.1145/2559206.2574803, 10.1145/1240866.1241027}, and fewer have investigated how they can be used to deliver vibro-tactile cues [cite all].
 
 \subsection{Problem Statement and Aim}
-
-example references: \cite{BK08}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Statement of Problem}
-
 clearly state the problem to be addressed in your forthcoming project. Explain why it would be worthwhile to solve this problem.
+
+
+Following our motivation, we formulate the specific problem which we aim to solve. That is, we aim to develop a device which can improve cycling safety - helping to lower the number of cyclist fatalities. More specifically, we aim to develop a hazard notification system for cyclists, able to effectively communicate to the cyclist when a vehicle from behind is approaching. 
+
+The system is restricted to the context of notifying of vehicles behind the user, as from our motivation, this is deemed to be a possibly dangerous situation, with relatively little existing work to aid cyclists in this context. By focusing our system to work in this specific context, we aim to make the most impact in terms of improving cyclist safety.
+
+Regarding developing this system, we first aim to investigate what is the best metric (or metrics) to convey to a cyclist, to appropriately inform them of approaching vehicles. We hypothesise that this would simply be \textit{distance}. 
+
+Secondly, we aim to investigate how to code this using vibro-tactile
+
+Finally, we aim to evaluate it
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Background Survey}
+There is little literature on hazard notification systems for cyclists [footnote saying how many results there are], and of the existing corpus, few relate to the problem of cars encroaching from behind (the context in which this project is based). To address this issue, we first survey existing literature related to in-vehicle hazard notification systems. We then combine this with insights gathered from studies relating to …. to form an overall view of the background of this project.
 
-\subsection{Technologu}
+\subsection{Feedback Modalities in Cycling}
+Wolfe et al, investigated the different types of distractions which cyclists commonly face, finding that auditory distractions were most common, followed shortly by visual ones \cite{wolfe2016distracted}. Despite relatively little research into *‘distracted biking’* \cite{mwakalonge2014distracted} it is generally believed that cyclists’ use of mobile phones is at the root of the cause. Angelis et al. were the first to study the relationship between smartphone usage while cycling and frequency of crashes, finding that the usage of a smartphone led to an increased crash risk \cite{doi:10.1080/19439962.2019.1591559}. With over half a surveyed population admitting to using their mobile device on every trip \cite{GOLDENBELD20121} and 17\% of the population admitting to using one during every ride \cite{goldenbeld2010use}, there have been calls to put legislations in place to prevent the use of smartphones while cycling \cite{banphoneuse}. Whilst some studies have investigated ways to improve smartphone interaction while cycling to reduce distraction \cite{10.1145/3544548.3580971, 10.1145/3152832.3152871} other approaches have investigated alternative interaction modalities, which don’t make use the visual sensory channel.
+
+The concept of utilising different sensory channels to convey information is an idea studied by Wickens \cite{wickens1984processing} and Wickens and Liu \cite{doi:10.1177/001872088803000505}, who explored ‘Multiple Resource Theory’ - a model of human information processing which predicts that attention is a limited cognitive resource that can be allocated across different tasks and modalities. The model implies that multiple sensory channels can be used simultaneously (within the cognitive load of the individual), without any individual one degrading the processing performance of the human operator. Seeking to take advantage of this concept, Wickens suggests that tasks can be configured to utilise multiple sensory channels - exploiting the information-processing capabilities of the human operator.
+
+In the context of cycling, multiple works would explore the potential of utilising such a model, by developing tactile displays to aid navigation. One of the earliest instances of this was by Pielot et al., who developed Tacticycle - a bicycle with a minimal set of navigational cues encoded into the handlebars, to guide tourists to points of interests \cite{10.1145/2371574.2371631}. Direction was encoded via the relative intensity across both handlebars. For example, a 45 degree angle to the right was indicated by 25\% intensity vibration in the left handlebar and a 75\% intensity vibration in the right. Steltenpohl and Bouwer created Vibrobelt - a vibro-tactile belt also developed to aid navigation while cycling \cite{10.1145/2449396.2449450}. By analysing the visual focus and spatial knowledge acquisition of participants, the authors found that the use of Vibrobelt increased participants ability to recall images from the route, but were generally slower at navigating and recalling the route - showing a lesser contextual understanding. Peeters et al. investigated response times of vibro-tactile cues during various levels of physical cycling exercise \cite{peeters2019vibrotactile}. The results showed that cyclists reaction time to stimuli increased as they were cycling with greater effort.
+
+Authors et al., investigated the effect of unimodal warnings on cyclists to prevent collisions, specifically comparing acoustic and vibro-tactile warnings \cite{STROHAEKER2022151}. The results found that warnings, especially acoustic, were effective at shortening response times to potential collisions. Though, vibro-tactile warnings could also be effective for a system which doesn’t require urgent reactions from the cyclist. This study however, did not consider how multi-modal warnings could be used. This would be investigated by authors et al. who compared the effectiveness of delivering warning to child cyclists using visual, auditory, and vibro-tactile feedback \cite{10.1145/3290605.3300850, 10.1145/3229434.3229479}. They found that unimodal cues were easier to recognise, so were best to indicate directions, but that multi-modal cues were best used to communicate when immediate action is required as it demonstrated shorter reaction times and better understandability. This finding is backed by author et al. who compared different awareness message modalities for cyclists to avoid dooring\footnote{Dooring is a type of collision where a parked vehicle door suddenly opens onto the path of an incoming cyclist. It has received much attention of the past decade, with anti-dooring laws \cite{roadsafetyrules, highwaycode, illinoiscode} and studies investigating anti-dooring techniques \cite{large2018validating}.} \cite{10.1145/3490099.3511127, mti6010003}. By evaluating the combination of visual messages, auditory icons, and voice messages, to deliver warnings to cyclists, they found that cyclists generally prefer to receive multi-modal warnings.
+
+Despite the potential of using different communication modalities while cycling, there are drawbacks to each. Author et al., investigated the effect of listening to music on a cyclist’s ability to understand auditory cues \cite{DEWAARD2011626}. They found that cyclists auditory perception deteriorated when doing so, with 68\% of participants missing auditory cues. Author et al., suggested a way to address this could be the use of bone conducting headphones \cite{wolfe2016distracted}. These differ from regular headphones in that instead of projecting air pressure waves directly into a users ear, they instead use the cheekbones to transfer auditory signals directly to the cochlea \cite{littler1952hearing}. However Keenan R. May and Bruce N. Walker studied the use of bone conduction headphones, finding that they affected a user’s ability to localise critical environment sounds \cite{may2017effects} - a skill crucial for cycling.
+
+Authors et al., reported that the perception of vibro-tactile signals during cycling worsen in environments where the surface causes haptic interference \cite{erdei2020comparing, doi:10.1080/15389588.2021.1985113}. However, they also believed this could be overcame by adjusting how the vibro-tactile stimuli was delivered to the cyclist. Author et al., delivered tactile signals to the hands of participants, finding that they recognised particular signals 87.4\% of the time \cite{10.1145/1979742.1979760}. Tacticyle \cite{10.1145/2371574.2371631} delivered vibrations through the handlebars as they believed, *“these are the only parts of the bicycle that the rider constantly touches during the ride”*. This statement would be proven correct by Wolfgang et al. who found that cyclists like to keep their hands on the handlebars as much as possible \cite{10.1145/3152832.3152871}. Furthermore, Clark et al. further studied cyclists use of technology while cycling and through findings of an ethnographic study, they introduced the concept that the handlebars are a ‘zonal space’ \cite{10.1145/3544548.3580971}. This alluded to the possibility of increasing a potential stimuli vocabulary, by encoding information across various zones of the handlebars. Companies have even capitalised on the capabilities of the handlebars for vibro-tactile feedback, with products such as smrtgrips \cite{smartgrips} which can be attached to the handlebars of any bicycle.
+
+\subsection{Existing Cycling Safety Measures}
+COMPLETE SECTION
+
+\subsection{Hazard Notification for Cyclist Safety}
+The idea of a hazard notification system was first explored in 1992 by Avraham D. Horowitz and Thomas A. Dingus \cite{doi:10.1177/154193129203601320}. They proposed various design approaches, such as adjusting the warning intensity based off the detected collision time, and employing different signal modalities to convey various warning severities - concepts which have been often used in later research. However, it wasn’t until 1996 where one of the earliest hazard detection systems emerged \cite{566402}. While not explicitly labelled as a hazard detection system, this project combined radar and vision technologies to create a system which could detect and classify road vehicles ahead of the car, then appropriately change lanes to avoid collision. This idea of detecting vehicles in-front was continued in subsequent research by Huang et al, who developed a warning system which could detect lane boundaries and successively detect a vehicle in-front 97\% of the time \cite{1307429}. Despite previous concerns about the effectiveness of imperfect in-vehicle collision avoidance warning systems (IVCAWSs), M Maltz demonstrated through a prolonged study that even these imperfect systems could significantly aid drivers, as after a relatively short use of the system, participants were able to maintain longer and safer headways for at least six months \cite{doi:10.1518/0018720024497925, doi:10.1518/hfes.46.2.357.37348}.
+
+These early in-vehicle warning systems are all examples of Intelligent Transport Systems (ITSs) - a series of information and communications technologies which aim to improve the safety of transportation \cite{its}. Despite research into various types of ITSs such as … , relatively few technologies study how the safety of vulnerable road users (VRUs), such as cyclists, can be improved \cite{Scholliers2017}. Authors et al., performed a quantitative safety impact assessment of five different types of ITSs, to evaluate which has the greatest potential to improve cyclist safety \cite{silla2017can}. They found that by 2030, the Pedestrian and Cyclist Detection System + Emergency Braking (an in-vehicle system which uses detection sensors to detect pedestrians/cyclists in front of a forward moving vehicle to warn and automatically brake) would have the greatest effect. The PROSPECT project \cite{cieslik2019improving}, funded by the European Commission, further improves the effectiveness of detection systems. Not only is it able to detect VRUs, but it can also detect the intentions of them too - allowing the vehicle to take pre-emptive measures (such as changing speed or course) to avoid a collision. Expected to be completed by 2025, this project is expected to reduce the number of seriously injured people in the EU by anywhere up to 2,500 people by 2030.
+
+Another promising ITS mentioned in \cite{SILLA2017134} were Bicycle to Vehicle communication (B2V) systems. Author et al. brought cyclists onto a connected network, by outfitting cyclists with a low cost DSRC WAVE solution - allowing them to receive communications from smart-connected vehicles and infrastructure on the US Connected Vehicles program \cite{7929602}, \cite{usdot}. Warning messages were delivered to cyclists multi-modally, combining audio and haptic cues. By varying signal parameters, they were able to create a unique vocabulary of cues which cyclists could learn. A smartphone speaker was used to deliver audio alerts and Boreal Bikes’ haptic smrtGRiPs \cite{smartgrips} to provide tactile feedback. Author et al., combined these techniques of cyclist detection and connected networks, to create InTraSafEd5G \cite{10.1145/3434770.3459732}. By installing nodes across various traffic lights around Vienna, the authors create an Edge network which is able to detect critical situations and deliver early warning messages to drivers in real-time using 5G. These warnings are delivered to a driver’s mobile phone, which communicates these warnings both audibly and visually. 
+
+Despite the potential for improving cyclist safety using ITSs, pre-existing attitudes and perceptions affect the acceptance of such systems. Author et al., investigated how attitudes towards cyclists effect how likely a driver is to use a new in-vehicle cyclist detection system \cite{de2017negative}. They found that drivers who already express a negative representation of cyclists are more unlikely to accept a new technology than those who do not. Author et al. studied acceptance from the perspective of the cyclist, exploring cyclists’ beliefs and attitudes towards being equipped with human-machine interfaces (HMIs) for communication with smart-traffic \cite{berge2022cyclists}. Through analysis of questionnaire responses and interviews, the authors identified that cyclists were worried about using HMIs as the responsibility of safety would be imposed on themselves, regardless of situations in which they are the more vulnerable road user. 
+
+\subsection{Encoding Information using Vibro-tactile Stimuli}
+Much early work utilising vibro-tactile stimuli would explore how tactile displays could be incorporated alongside visual displays, to extend a computer systems’ functionality. Pentland, investigated how tactile displays could be used in wearable computing - suggesting they could be used as directional displays to aid navigation \cite{629923}. Pentland would shortly realise this idea of a wearable navigational display less than a year later in 1998, where they developed an adjustable vest which provides directional navigational instructions via vibrations \cite{729547}. These directions were conveyed by vibrating a grid of motors - which were sewn into the back of the vest - in a specific pattern. For example, to indicate a right turn, the motors were activated sequentially, from left to right. Research into the design of such a haptic vest would continue over the years, including a study, investigating its efficiency in conveying directional instructions across different gravity conditions \cite{998954}. Although the study found that the perceived intensity of vibrotactile signals did not change across the varying conditions, it did comment on the effect that cognitive load has on a persons ability to interpret tactile signals - suggesting the need for further psychophysical experiments investigating haptic perception.
+
+This method of communicating direction makes use of a vibro-tactile illusion known as ‘sensory saltation' - a phenomenon where successive pulses delivered to equidistant regions of a body part simulates the feeling of movement across the body part \cite{geldard1975sensory}. Authors author et al. and author et al., studied different types of sensory illusions, dividing haptic illusions into two types: sensory saltation, and funnelling, where the tactor signal is perceived in the middle of two simultaneously activated tactors \cite{5710913, s150407913}. How spatial characteristics of vibro-tactile motors effect the perception of such illusions is investigated by Roger W., who proves that illusions such as sensory saltation are just as effective as veridical sensations at conveying directional information \cite{cholewiak2000generation}.
+
+Much later research would continue investigating how vibro-tactile displays could be effectively used to provide navigational aids. Van Erp would introduce a new direction coding scheme where the on-body location of a localised vibration would indicate the direction of travel \cite{van2000tactile}. Using a haptic vest similar to \cite{729547}, they would instead attach motors in a 360 degree horizontal plane around the wearers body, allowing directions in a 360 degree circumference to be conveyed. The benefit of only requiring a linear array of motors would lead to these systems being implemented on smaller wearables, typically a belt \cite{10.1145/1463160.1463179, tsukada2004activebelt, 10.1145/2449396.2449450}. Van Erp would also later investigate the spatial resolution of such a system, suggesting users could effectively navigate using a spatial resolution of only 45 degrees (1 motor in each cardinal and oblique direction) \cite{10.1145/1060581.1060585}. Quantitively proven to reduce cognitive load on the user \cite{VANERP2004247}. This method of communicating direction would become the norm for tactile navigational displays.
+
+However, although a simple navigational system may only convey direction to a user, a more effective one using such vibrotactile stimuli would typically also convey an idea of distance \cite{burntt2002empirical}. Previous studies have investigated various vibro-tactile coding schemes for distance. McDaniel et al. utilises tactile rhythms to create a coding scheme to convey intimate, personal, interpersonal, and social distances to the blind \cite{10.1145/1520340.1520718}. The study showed that given a small training period, users were able to learn and effectively identify different tactile rhythms. Straub et al performed a similar experiment which investigated the effectiveness of using the parameters of frequency, intensity, and rhythm to convey distance \cite{5326374}; however, no conclusive results were gathered regarding whether they were effective. van Erp et al. investigated the effectiveness of different distance coding schemes to aid navigation for pedestrian participants \cite{10.1145/1060581.1060585}. They studied five different distance coding schemes which used the parameter of rhythm. Notably, they found there was no difference in participant performance when comparing those with access to distance information, to those without - concluding that this may be due to the confounding of the distance information with the temporal resolution of the direction information. This system is improved upon by Pielot et al. who developed a tactile display which presents the position and distance of other team members in a fast-paced 3D multiplayer game \cite{10.1145/1753326.1753581}. By comparing distance coding schemes using rhythm, duration, and intensity of a tactile signal, they proved the feasibility of a navigational tactile display which can be used effectively in an environment with high cognitive demand. The proven effectiveness of these systems set the basis for many future works investigating vibrotactile feedback for navigation.
+
+
+Talk about:
+- [[Exploring distance encodings with a tactile display to convey turn by turn information in automobiles]]
+- [[Vibrobelt - tactile navigation support for cyclists]]
+- [[HaptiMoto - turn-by-turn haptic route guidance interface for motorcyclists]]
+- [[Navigation Systems for Motorcyclists - Exploring Wearable Tactile Feedback for Route Guidance in the Real World]]
+
+
+Move some stuff from pre-user study section to here
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Proposed Approach}
