--- a/interim-report/interim.bib
+++ b/interim-report/interim.bib
@@ -985,7 +985,7 @@ abstract = {If all cyclistswere wearing helmets, significant numbers of head inj
   publisher={Nature Publishing Group UK London}
 }
 
-@article{article,
+@article{guidelines,
 author = {Erp, Jan},
 year = {2002},
 month = {01},
